--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,23 @@ p {
     font-size: 12px;
     color: green;
 }
+
+body {
+    background-color: black;
+    color: white;
+}
+
+div.text{
+    border-style: dotted;
+    border-width: 2px;
+    width: 100px;
+    height: 100px;
+}
+
+ol {
+    list-style-type: upper-alpha;
+}
+
+ul {
+    list-style-type: square;
+}
