--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 .nav {
     background-color:skyblue;
     border-style: solid;
@@ -18,46 +21,41 @@
     padding-top: 10px;
     background-color: lightcoral;
 }
+.vasenrivi {
+    float: left;
+    width: 75%;
+}
+.oikearivi {
+    float: right;
+    width: 25%;
+}
+.section {
+    background-color:tomato;
+    padding: 20px;
+    margin-top: 20px;
+}
+.article {
+    background-color: khaki;
+    pading: 20px;
+    margin-top: 20px;
+}
+.aside {
+    background-color: rgb(211, 110, 248);
+    padding: 20px;
+    margin-top: 20px;
+}
+.rivi:after {
+    display: table;
+    clear: both;
+}
+@media screen and (max-width: 800px) {
+    .vasenrivi, .oikearivi {
+        width: 100%;
+        padding: 0;
+    }
+}
 body {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.section {
-    background-color:violet;
-    border-style: solid;
-    border-width: 1.5px;
-    border-radius: 10%;
-    margin-right: 60%;
-    padding: 10px;
-}
-.aside {
-    background-color: khaki;
-    border-style: solid;
-    border-width: 1.5px;
-    border-radius: 20%;
-    width: 40%;
-    padding: 10px;
-    text-align: center;
-    position: absolute;
-       
-}
-.article {
-    background-color: lightcyan; 
-    border-style: solid;
-    border-width: 1.5px;
-    border-radius: 10%;
-    padding: 10px;
-    margin-right: 60%;
-    margin-top: 10px;  
-}
-.rivi:after {
-    content: normal;
-    display: table;
-    clear: both;
-}
-.rivi {
-    float: left;
-    padding: 10px;
 }
