--- a/layout.css
+++ b/layout.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
 }
+.header {
+    background-color: lightgreen;
+    text-align: center;
+    padding-top: 10px;
+}
 .nav {
     background-color:skyblue;
     border-style: solid;
@@ -9,16 +14,23 @@
     text-align: center;
     margin-bottom: 10px;
 }
+.nav a{
+    display: inline-block;
+    text-decoration: none;
+}
+.nav a:hover {
+    background-color: white;   
+}
 .footer {
     position: fixed;
     text-align: center;
-    font-size: 10px;
+    font-size: 12px;
     width: 90%;
     height: 20px;
     bottom: 0;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 10px;
+    padding-top: 5px;
     background-color: lightcoral;
 }
 .vasenrivi {
@@ -36,8 +48,9 @@
 }
 .article {
     background-color: khaki;
-    pading: 20px;
+    padding: 20px;
     margin-top: 20px;
+    
 }
 .aside {
     background-color: rgb(211, 110, 248);
