--- a/components/components.html
+++ b/components/components.html
@@ -42,12 +42,12 @@
     </div>
 
     <div class="containerkuva">
-        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
-            class="rounded-circle float-star" height="300px" width="300px" alt="bootstrap logo">
-        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
-            class="rounded-circle mx-auto d-block" height="300px" width="300px" alt="bootstrap logo">
-        <img src="/Users/vili/Documents/GitHub/ilkkovili.github.io/bootstrap-logo-1.jpg"
-            class="rounded-circle float-end" height="300px" width="300px" alt="bootstrap logo">
+        <img src="bootstrap-logo-1.jpg" class="rounded-circle float-star" height="300px" width="300px"
+            alt="bootstrap logo">
+        <img src="bootstrap-logo-1.jpg" class="rounded-circle mx-auto d-block" height="300px" width="300px"
+            alt="bootstrap logo">
+        <img src="bootstrap-logo-1.jpg" class="rounded-circle float-end" height="300px" width="300px"
+            alt="bootstrap logo">
     </div>
 
 
