--- a/components/components.html
+++ b/components/components.html
@@ -41,17 +41,37 @@
         </div>
     </div>
 
-    <div class="containerkuva">
-        <img src="bootstrap-logo-1.jpg" class="rounded-circle float-star" height="300px" width="300px"
-            alt="bootstrap logo">
-        <img src="bootstrap-logo-1.jpg" class="rounded-circle mx-auto d-block" height="300px" width="300px"
-            alt="bootstrap logo">
-        <img src="bootstrap-logo-1.jpg" class="rounded-circle float-end" height="300px" width="300px"
-            alt="bootstrap logo">
+    <div class="container-fluid">
+        <div class="column">
+            <img src="bootstrap-logo-1.jpg" class="img-fluid rounded-circle float-sm-start" height="300px" width="300px"
+                alt="bootstrap logo">
+        </div>
+        <div class="column">
+            <img src="bootstrap-logo-1.jpg" class="img-fluid rounded-circle mx-auto d-block" height="300px"
+                width="300px" alt="bootstrap logo">
+        </div>
+        <div class="column">
+            <img src="bootstrap-logo-1.jpg" class="img-fluid rounded-circle float-sm-end" height="300px" width="300px"
+                alt="bootstrap logo">
+        </div>
     </div>
 
+    <hr>
 
-
+    <div class="container-fluid">
+        <div id="row">
+            <div class="col">
+                <img src="laurean-amk-logo-fi.jpg" alt="Laurea Ammattikorkeakoulu logo" height="300px" width="300px"
+                    class="img-fluid">
+            </div>
+            <div class="col">
+                <h2>Bootstrap starter template</h2>
+                <a>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultrices urna eu mattis luctus. Sed
+                    maximus,
+                    lorem in porttitor commodo, magna arcu sagittis lectus, id bibendum arcu metus vel felis.</a>
+            </div>
+        </div>
+    </div>
 
 
 
