--- a/8bwireframe/about.css
+++ b/8bwireframe/about.css
@@ -17,9 +17,13 @@
      text-align: center;
      margin-top: 20px;
  }
- xfooter {
-     margin-top: 350px;
-     
+ .footer {
+     position: relative;
+     bottom: 0;
+     width: 100%;
+     line-height: 60px;
+     height: 60px;
+     margin-top: 100px;
  }
  .row {
      margin-top: 50px;
