--- a/advanced/advanced_style.css
+++ b/advanced/advanced_style.css
@@ -12,11 +12,11 @@
     border: 1px solid;
     padding: 5px;
     box-shadow:5px 10px red;
-    background-image: url("/Users/vili/Documents/GitHub/ilkkovili.github.io/advanced/stockimage.jpeg");
+    background-image: url(/Users/vili/Documents/GitHub/ilkkovili.github.io/advanced/stockimage.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 500px;
-    color: white;
+    color: red;
 }
 h1 {
     text-shadow: 2px 2px blue;
