--- a/homepage/index.css
+++ b/homepage/index.css
@@ -25,34 +25,8 @@ h1 {
 img {
     margin-top: 20px;
 }
-button {
-    margin-bottom: 10px;
-}
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
 
-/* Carousel base class */
-.carousel {
-    margin-bottom: 4rem;
-  }
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    bottom: 3rem;
-    z-index: 10;
-  }
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 32rem;
-  }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem;
-  }
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -111,11 +85,16 @@ button {
     left: 0;
     min-width: 100%;
     height: 32rem;
+    background: #7777;
   }
-  .carousel-inner {
-    background: url(images/kukat.JPG);
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+  .carousel-control-next {
+      height: 26%;
+      top: 33%;
+    width: 86px;
+  }
+  .carousel-control-prev {
+      height: 26%;
+      top: 33%;
+      width: 86px;
   }
   
