--- a/homepage/works.css
+++ b/homepage/works.css
@@ -91,6 +91,7 @@ img {
 .mySlides {
     display: none;
     background-color: black;;
+    text-align: center;
 }
 
 .cursor {
@@ -132,7 +133,7 @@ img {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
-    position: relative;
+    position: absolute;
     top: 0;
 }
 .caption-container {
@@ -170,5 +171,11 @@ img.hover-shadow {
   @media only screen and (max-width: 700px) {
       .modal-content {
           width: 100%;
+          height: 100%;
+        
       }
   }
+  :root {
+    scroll-behavior: smooth;
+    overflow: hidden;
+}
